--- a/app/template.html
+++ b/app/template.html
@@ -8,10 +8,44 @@
             margin: 0px;
         }
 
+        #canaudio {
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 0;
+            height: 0;
+            pointer-events: none;
+        }
+        label[for="canaudio"] {
+            position: fixed;
+            bottom: 1.5rem;
+            right: 1.5rem;
+            background: #0004;
+            padding: 1.5rem;
+            border-radius: 50%;
+            border: 2px solid transparent;
+            width: 3rem;
+            height: 3rem;
+            text-align: center;
+            font-size: 0;
+            color: white;
+        }
+        #canaudio:focus + label[for="canaudio"] {
+            border: 2px solid white;
+        }
+        label[for="canaudio"]::before {
+            content: "🔇\FE0E";
+            font-size: 3rem;
+            line-height: 3rem;
+        }
+        #canaudio:checked + label[for="canaudio"]::before {
+            content: "🔊\FE0E";
+        }
     </style>
 </head>
 <body>
-
-
+    <input type="checkbox" id="canaudio" />
+    <label for="canaudio">Toggle Audio</label>
 </body>
 </html>
