--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
             margin: 0px;
         }
 
+        #canaudio-container {
+            display: none;
+        }
         #canaudio {
             opacity: 0;
             position: absolute;
@@ -45,7 +48,9 @@
     </style>
 </head>
 <body>
-    <input type="checkbox" id="canaudio" />
-    <label for="canaudio">Toggle Audio</label>
+    <div id="canaudio-container">
+        <input type="checkbox" id="canaudio" />
+        <label for="canaudio">Toggle Audio</label>
+    </div>
 </body>
 </html>
